--- a/Magic Weather Stage/Main.storyboard
+++ b/Magic Weather Stage/Main.storyboard
@@ -35,7 +35,7 @@
                                     <constraint firstAttribute="height" constant="1" id="nuF-C2-nrR"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xXc-XO-PPr">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xXc-XO-PPr">
                                 <rect key="frame" x="20" y="151" width="374" height="270"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="270" id="vqC-0h-xsY"/>
